client side page update
Added missing frontend pages

--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Stride</title>
+  <link rel="icon" href="./src/images/icon-512.png" type="image/png">
 
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript">
@@ -28,14 +29,18 @@
       webvisor: true
     });
   </script>
-  <noscript>
-    <div><img src="https://mc.yandex.ru/watch/97231849" style="position:absolute; left:-9999px;" alt=""/></div>
-  </noscript>
   <!-- /Yandex.Metrika counter -->
 
 </head>
 <body>
 <div id="root"></div>
 <script type="module" src="/src/main.jsx"></script>
+
+<!-- Yandex.Metrika counter -->
+<noscript>
+  <div><img src="https://mc.yandex.ru/watch/97231849" style="position:absolute; left:-9999px;" alt=""/></div>
+</noscript>
+<!-- /Yandex.Metrika counter -->
+
 </body>
 </html>
