--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
       }
       k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
     })
-    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+    (window, document, "script", "https://mc.yandex.ru/metrika/taskTag.js", "ym");
 
     ym(97231849, "init", {
       clickmap: true,
