--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
       }
       k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
     })
-    (window, document, "script", "https://mc.yandex.ru/metrika/taskTag.js", "ym");
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
     ym(97231849, "init", {
       clickmap: true,
@@ -29,6 +29,9 @@
       webvisor: true
     });
   </script>
+  <noscript>
+    <div><img src="https://mc.yandex.ru/watch/97231849" style="position:absolute; left:-9999px;" alt=""/></div>
+  </noscript>
   <!-- /Yandex.Metrika counter -->
 
 </head>
