--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" href="./src/images/icon-512.png" type="image/png">
 
   <!-- Yandex.Metrika counter -->
+  <!-- Yandex.Metrika counter -->
   <script type="text/javascript">
     (function (m, e, t, r, i, k, a) {
       m[i] = m[i] || function () {
@@ -29,9 +30,6 @@
       webvisor: true
     });
   </script>
-  <noscript>
-    <div><img src="https://mc.yandex.ru/watch/97231849" style="position:absolute; left:-9999px;" alt=""/></div>
-  </noscript>
   <!-- /Yandex.Metrika counter -->
 
 </head>
@@ -39,7 +37,7 @@
 <div id="root"></div>
 <script type="module" src="/src/main.jsx"></script>
 
-<!-- Yandex.Metrika counter -->
+<!-- /Yandex.Metrika counter -->
 <noscript>
   <div><img src="https://mc.yandex.ru/watch/97231849" style="position:absolute; left:-9999px;" alt=""/></div>
 </noscript>
